examples/datalog/12_errors/23_unbalanced_parens.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unbal_parens
Knowledge graph 'test_unbal_parens' created.
Switched to knowledge graph: test_unbal_parens
> .kg use test_unbal_parens
Switched to knowledge graph: test_unbal_parens
> +facts[(1, 2, 3].
Script error: Parse error: Invalid term: '(1, 2, 3'
